--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         margin: 0;
     }
     canvas {
-        background-color: rgba(255, 215, 212, 1);
+        background-color: rgba(255, 215, 212, 0.3);
     }
 </style>
-<canvas></canvas>
+<canvas>
+    <h1>WASSUP</h1>
+</canvas>
 <script src="script.js"></script>
     
 </body>
